--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,17 @@
-// TODO
+.headerContainer {
+  height: 5rem;
+  margin: 3rem 0;
+}
+
+.headerContent {
+  max-width: 1120px;
+  height: 5rem;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+
+  img {
+    cursor: pointer;
+  }
+}
