--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,87 @@
-// TODO
+.posts {
+  max-width: 700px;
+
+  a {
+    display: block;
+
+    &+a {
+      margin-top: 2rem;
+      padding-top: 2rem;
+    }
+
+    h1 {
+      font-size: 1.75rem;
+      font-weight: 700;
+
+      line-height: 2rem;
+
+      color: var(--heading);
+
+      margin-top: 1rem;
+
+      transition: color 0.2s ease-in-out;
+    }
+
+    h2 {
+      font-size: 1.125rem;
+      font-weight: 400;
+
+      line-height: 1.375rem;
+
+      color: var(--subheading);
+
+      margin-top: 0.8rem;
+    }
+
+    .info {
+      display: flex;
+      color: var(--info);
+      font-size: 0.875rem;
+
+      margin-top: 1.5rem;
+
+      .createdAt,
+      .author {
+        display: flex;
+        align-items: center;
+      }
+
+      .createdAt {
+        time {
+          margin-left: 0.5rem;
+        }
+      }
+
+      .author {
+        margin-left: 1rem;
+
+        span {
+          margin-left: 0.5rem;
+        }
+      }
+    }
+
+    &:hover h1 {
+      color: var(--highlight);
+    }
+  }
+}
+
+.pagination {
+  margin-top: 4rem;
+
+  button {
+    border: 0;
+    background: transparent;
+
+    color: var(--highlight);
+    font-size: 1.125rem;
+    font-weight: 600;
+
+    transition: filter 0.2s ease-in-out;
+
+    &:hover {
+      filter: brightness(0.8);
+    }
+  }
+}
