--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,14 @@
-// TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+
+  padding-bottom: 3rem;
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: var(--highlight);
+}
